2004-12-01  Stan Shebs  <shebs@apple.com>

	* config/rs6000/rs6000.c (rs6000_override_options): Make 64-bit
	Darwin default to one-byte bools.

	* config/darwin.c (machopic_select_rtx_section): Don't put relocatable
	expressions in the .literal8 section.

2004-11-21  Stan Shebs  <shebs@apple.com>

	* config/rs6000/rs6000.c: (rs6000_darwin64_function_arg): Add
	UNION_TYPE case.
	(function_arg): Move darwin test up, sniff mode first for
	efficiency, test for union type.

2004-11-14  Stan Shebs  <shebs@apple.com>

	Basic ABI changes for passing structs by value in 64-bit Darwin.
	* config/rs6000/rs6000.c (rs6000_darwin64_abi): New flag.
	(rs6000_override_options): Set it for 64-bit Darwin.
	(rs6000_parse_abi_options): Add testing options to change it.
	(rs6000_return_in_memory): Test whether the type is one
	that can be passed in registers.
	(darwin64_function_arg_advance): New.
	(function_arg_advance): Call it, plus add recursion depth
	argument and test when counting off arguments.
	(rs6000_darwin64_function_arg): New.
	(function_arg): Call it.
	(setup_incoming_varargs): Add argument to function_arg_advance.
	(rs6000_darwin64_function_value): New.
	(rs6000_function_value): Call it.
	* config/rs6000/rs6000.h (FUNCTION_ARG_ADVANCE): Pass depth arg.
	* config/rs6000/rs6000-protos.h: Update decl of
	function_arg_advance.

2004-11-04  Geoffrey Keating  <geoffk@apple.com>

	* Makefile.in (distclean): Don't delete nonexistent fixinc/ directory.
	(install-mkheaders): Install the version built for the
	host, not for the build machine.
	* configure.ac: Always run fixincludes.
	(all_outputs): Remove mkheaders.
	* configure: Regenerate.
	* fixinc.in: Move to fixincludes/.
	* mkfixinc.sh: Likewise.
	* mkheaders.in: Likewise.
	* README-fixinc: Likewise.

2004-11-02  Geoffrey Keating  <geoffk@apple.com>

	* configure.ac: Don't clear STMP_FIXINC or STMP_FIXPROTO just
	because we don't want to run them now; instead, set them to
	stmp-install-fixproto or stmp-install-fixinc.