@@ -14,3 +14,8 @@ LIB2FUNCS_STATIC_EXTRA = \
 # even though they use AltiVec instructions.  -Wa is used because
 # -force_cpusubtype_ALL doesn't work with -dynamiclib.
 TARGET_LIBGCC2_CFLAGS = -Wa,-force_cpusubtype_ALL
+
+# APPLE LOCAL mainline
+darwin-fpsave.o:	$(srcdir)/config/rs6000/darwin-asm.h
+darwin-tramp.o:		$(srcdir)/config/rs6000/darwin-asm.h
+
