@@ -1,3 +1,11 @@
+2004-12-09  Stan Shebs  <shebs@apple.com>
+
+	* config/rs6000/darwin-asm.h: New file, 32/64-bit assembly macros
+	  formerly in darwin-tramp.asm.
+	* config/rs6000/darwin-tramp.asm: Include darwin-asm.h.
+	* config/rs6000/darwin-fpsave.asm: Use 32/64-bit macros.
+	* config/rs6000/t-darwin: Add dependencies.
+
 2004-12-01  Stan Shebs  <shebs@apple.com>
 
 	* config/rs6000/rs6000.c (rs6000_override_options): Make 64-bit
